autotests/syntax-tests/tests/negative/negative91.sref
Name { Name Name , Name $EENUM Name Name : { } : , : = : = ;
= ; } ; 